--- a/styles/style.css
+++ b/styles/style.css
@@ -2,10 +2,10 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
-body{
-    display: grid;
-    grid-template-rows: 100px 1fr;
+body {
+    height: 100vh;
 }
 main {
     display: grid;
@@ -47,10 +47,13 @@ header {
 .mainContent {
     background-color: #E8F1F2;
     padding: 10px;
+    
+}
+.feedContainer {
     display: grid;
     overflow-y: scroll;
 }
-.mainContent article {
+.mainContent .article {
     display: grid;
     grid-template-columns: 1fr auto;
 }
@@ -63,5 +66,9 @@ header {
     border: 1px solid black;
     width: 50%;
     padding: 5px;
+}
+
+.editingSection form {
+   display: grid;
 }
 
