--- a/styles/style.css
+++ b/styles/style.css
@@ -181,15 +181,24 @@ section.filterFeed > * {
     
 }
 .comment {
-    background-color: rgba(249, 252, 255, 0.924);
+    background-color: #f9fcffec;
     display: block;
     border-radius: 5px;
     padding: 15px;
 }
+.commentForm {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    margin-top: 10px;
+}
 .commentInput {
-    width: 100%;
     height: 1.5rem;
     border: none;
+}
+.submitCommentButton {
+    width: 50px;
+    background-color: #1B98E0;
+    color: #f9fcffec;
 }
 
 .articleURL {
