--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,6 @@ main {
     grid-template-columns: auto 1fr;
     gap: 5px;
     padding: 10px;
-    overflow-y: scroll;
 }
 
 header {
@@ -39,6 +38,7 @@ header {
     display:grid;
     place-items:center;
     color: #E8F1F2;
+    padding:7px;
 }
 .edit-tiles {
     display: grid;
@@ -91,14 +91,14 @@ header {
 .publishArticleBtn{
     position:relative;
     width: 50px;
-    left:890px;
+    left:1050px;
 }
 
 .deleteArticleBtn{
     position:relative;
     width:50px;
-    left:200px;
-    top:100px;
+    left:1050px;
+    bottom:500px;
 }
 
 
@@ -126,9 +126,15 @@ section.filterFeed > * {
     padding: 5px 0;
     
 }
+
+.filterFeed h3{
+    font-size: 12px;
+}
+
 .mainContent {
     background-color: #E8F1F2;
     padding: 10px;
+    height:500px
 }
 .feedContainer > * {
     padding: 20px 0;
@@ -136,17 +142,17 @@ section.filterFeed > * {
 .feedContainer {
     display: grid;
     color: rgb(53, 53, 53);
+    height: 100%;
+    overflow-y:scroll
 }
 .feedContainer h3 {
     font-size: small;
     color: rgb(82, 82, 82);
     padding-top: 10px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
   
 }
-.feedContainer {
-    display: grid;
-}
+
 .mainContent .article {
     display: grid;
     grid-template-columns: 1fr auto;
@@ -162,6 +168,10 @@ section.filterFeed > * {
     padding: 5px;
 }
 
+.article{
+    border-bottom:1px solid black;
+}
+
 .backBtn{
     padding:5px;
 }
@@ -173,6 +183,11 @@ section.filterFeed > * {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
+
+.search-btn{
+    height:15px;
+}
+
 label {
 display: block;
 }
