--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ main {
     grid-template-columns: auto 1fr;
     gap: 5px;
     padding: 10px;
-    width: calc(100vwx);
+
     height: calc(100vh - 200px);
 }
 
@@ -141,7 +141,8 @@ section.filterFeed > * {
     background-color: #E8F1F2;
     padding: 10px;
     height:100%;
-    overflow: scroll;
+    width: calc(100vw - 250px);
+    overflow-y: scroll;
 }
 .feedContainer > * {
     padding: 20px 0;
@@ -150,7 +151,6 @@ section.filterFeed > * {
     display: grid;
     color: rgb(53, 53, 53);
     height: 100%;
-    overflow-y:scroll
 }
 .feedContainer h3 {
     font-size: small;
